--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,5 @@
     <string name="medium">Medium</string>
     <string name="hard">Hard</string>
     <string name="min">min</string>
-    <string name="h">h</string>
+    <string name="hours_abbreviation">h</string>
 </resources>
