--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,6 @@
     <string name="hard">Hard</string>
     <string name="min" translatable="false">min</string>
     <string name="hours_abbreviation" translatable="false">h</string>
-    <string name="add_recipe">Add recipe</string>
+    <string name="add_recipe">Add recipeInfo</string>
     <string name="recipe_description" translatable="false">Recipe description</string>
 </resources>
