Updating populating DB logic to include recipe steps

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,21 @@
     <string name="hours_abbreviation" translatable="false">h</string>
     <string name="add_recipe">Add recipeInfo</string>
     <string name="recipe_description" translatable="false">Recipe description</string>
+
+    <!-- TODO don't package these/-->
+    <string name="test_recipe_step_1" translatable="false">Place the rinsed lentils in a medium saucepan along with 3 cups of room temperature water. Turn the heat to medium and allow the lentils to cook for 20 minutes.</string>
+    <string name="test_recipe_step_2" translatable="false">Meanwhile, heat the oil in a medium skillet set over medium heat. Add the cumin seeds and cinnamon stick; cook for 60 to 90 seconds, until fragrant.</string>
+    <string name="test_recipe_step_3" translatable="false">Add the onion, green chili pepper, garlic, and ginger; cook for 4 to 5 minutes, until the onions are turning translucent.</string>
+    <string name="test_recipe_step_4" translatable="false">Add the turmeric, cardamom, paprika, salt, and tomato to the pan. Cook until the tomato begins to fall apart, about 2 to 3 minutes. Discard the cinnamon stick.</string>
+    <string name="test_recipe_step_5" translatable="false">Once the lentils are cooked, drain off any excess water. Stir the spiced onion mixture into the pot of lentils. Add the lemon juice and stir well. Taste and add salt as needed.</string>
+    <string name="test_recipe_step_6" translatable="false">Garnish with cilantro; serve with basmati rice and naan.</string>
+
+    <string name="test_ingredient_1" translatable="false"> 1 cup red lentils, rinsed</string>
+    <string name="test_ingredient_2" translatable="false"> 1 tablespoon vegetable oil</string>
+    <string name="test_ingredient_3" translatable="false"> 1/2 teaspoon cumin seeds</string>
+    <string name="test_ingredient_4" translatable="false"> 1 (2-inch) cinnamon stick</string>
+    <string name="test_ingredient_5" translatable="false"> 1 cup diced yellow onion</string>
+    <string name="test_ingredient_6" translatable="false"> 1 green chili pepper, stemmed, seeded, and minced (serrano for spicy, jalapeno for more mild)</string>
+    <string name="test_ingredient_7" translatable="false"> 4 garlic cloves, minced</string>
+    <string name="test_ingredient_8" translatable="false"> 1 tablespoon finely minced ginger root</string>
 </resources>
